@@ -201,6 +201,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26167: Minimized overhead in copy.copy() and copy.deepcopy().
+  Optimized copying and deepcopying bytearrays, NotImplemented, slices,
+  short lists, tuples, dicts, sets.
+
 - Issue #25718: Fixed pickling and copying the accumulate() iterator with
   total is None.
 
